--- a/WebRansack/wwwroot/index.htm
+++ b/WebRansack/wwwroot/index.htm
@@ -56,7 +56,8 @@
     <h1>Search and replace tools</h1>
 
     <a href="search.htm" target="_blank">Search</a><br />
-    <a href="replace.htm" target="_blank">Search and replace</a>
+    <a href="replace.htm" target="_blank">Search and replace</a><br />
+    <a href="table.htm" target="_blank">Result Table</a><br />
 
 
     <script type="text/javascript">
