--- a/WebRansack/wwwroot/index.htm
+++ b/WebRansack/wwwroot/index.htm
@@ -59,7 +59,7 @@
     <a href="replace.htm" target="_blank">Search and replace</a><br />
     <a href="table.htm" target="_blank">Result Table</a><br />
 
-    <a href="3d_view.htm" target="_blank">3D view</a><br />
+    <a href="multi_storey/3d_view.htm" target="_blank">3D view</a><br />
 
 
     <script type="text/javascript">
