--- a/WebRansack/wwwroot/multi_storey/3d_view.htm
+++ b/WebRansack/wwwroot/multi_storey/3d_view.htm
@@ -388,7 +388,8 @@
         </div>
     </div>
 
-    <div style="display: block; width: 100%; height: 10cm; overflow: scroll;">
+    <div style="display: block; width: 100%; height: 10cm; overflow: scroll; direction: rtl;">
+        <div style="direction: ltr;">
         <table style="border-collapse: collapse;">
             <thead>
                 <tr>
@@ -469,6 +470,7 @@
                 </tr>
             </tfoot>
         </table>
+        </div>
     </div>
 
     <script type="text/javascript">
